Fix spurious horizontal scroll bars in WbPlanView and TreeView

--- a/specifyweb/frontend/js_src/css/tree.css
+++ b/specifyweb/frontend/js_src/css/tree.css
@@ -1,7 +1,6 @@
 /* tree.css */
 
 div.tree-view {
-    width: 100%;
     height: 100%;
 }
 
