--- a/specifyweb/frontend/js_src/css/wbplanview.css
+++ b/specifyweb/frontend/js_src/css/wbplanview.css
@@ -21,7 +21,6 @@
   --border-size: 1px;
   --original-height: unset;
 
-  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
